<resources>
    <string name="app_name">First Aid Guide</string>
    <string name="fallingobjects">1) Falling objects </string>
    <string name="bruises">3) Bruises</string>
    <string name="tripsandfalls">2) Trips and Falls</string>
    <string name="sprains">4) Sprains</string>
    <string name="cuts">5) Cuts</string>
    <string name="burns">6) Burns</string>
    <string name="choking">7) Choking</string>
    <string name="poisoning">8) Poisoning</string>
    <string name="glassinjuries">9) Glass-related injuries</string>
    <string name="drowning">10) Drowning</string>
    <string name="workeriskilled">•\tin which a worker is killed;</string>
    <string name="title_activity_page3">page3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--- BMi calculatur -->

    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>


</resources>